--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -5,8 +5,7 @@
     android:id="@+id/cl"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.game.GameFragment"
-    >
+        >
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -22,12 +21,12 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="10dp"
-            android:layout_weight="1">
+            android:layout_weight="2">
 
             <TextView
                 android:id="@+id/gameHost"
                 android:layout_width="136dp"
-                android:layout_height="21dp"
+                android:layout_height="25dp"
                 android:text="User"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -64,13 +63,23 @@
                 android:id="@+id/hostRank"
                 android:layout_width="140dp"
                 android:layout_height="25dp"
-                android:text="TextView"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.183"
+                app:layout_constraintHorizontal_bias="0.149"
                 app:layout_constraintStart_toEndOf="@+id/gameHost"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.707" />
+                app:layout_constraintVertical_bias="0.705" />
+
+            <TextView
+                android:id="@+id/timeHost"
+                android:layout_width="87dp"
+                android:layout_height="25dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.272"
+                app:layout_constraintStart_toEndOf="@+id/hostRank"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.705" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.gridlayout.widget.GridLayout
@@ -117,13 +126,23 @@
                 android:id="@+id/guestRank"
                 android:layout_width="152dp"
                 android:layout_height="21dp"
-                android:text="TextView"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.133"
                 app:layout_constraintStart_toEndOf="@+id/gameGuest"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.125" />
+
+            <TextView
+                android:id="@+id/timeGuest"
+                android:layout_width="87dp"
+                android:layout_height="21dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.333"
+                app:layout_constraintStart_toEndOf="@+id/guestRank"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.121" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
