--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,9 +3,9 @@
     <color name="colorPrimary">#FFD211</color>
     <color name="white">#FFFFFFFF</color>
     <color name="transparent">#00000000</color>
-    <color name="background">#081B28</color>
+    <color name="background">#040F16</color>
     <color name="gray">   #3C3B39</color>
-    <color name="backgroundSecund">#262522</color>
+    <color name="backgroundSecund">#081D2B</color>
     <color name="font">#FFFFFFFF</color>
 
 </resources>
