--- a/app/src/main/res/layout/custom_layout.xml
+++ b/app/src/main/res/layout/custom_layout.xml
@@ -27,7 +27,7 @@
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="WINS"
+            android:text="wins!"
             android:textSize="30sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -60,9 +60,13 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.863" />
+            app:layout_constraintVertical_bias="0.863"
+            app:cornerRadius="8dp"
+            android:backgroundTint="@color/colorPrimary"
+            />
 
         <Button
+
             android:id="@+id/btnReturn"
             android:layout_width="140dp"
             android:layout_height="60dp"
@@ -72,7 +76,9 @@
             app:layout_constraintHorizontal_bias="0.574"
             app:layout_constraintStart_toEndOf="@+id/btnExit"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.865" />
+            app:layout_constraintVertical_bias="0.865"
+            app:cornerRadius="8dp"
+            android:backgroundTint="@color/colorPrimary"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
