--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -11,65 +11,70 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Start an online game session"
-        app:layout_constraintBottom_toTopOf="@+id/subCl"
+        android:layout_marginBottom="24dp"
+        android:text="Create an online game "
+        app:layout_constraintBottom_toTopOf="@+id/imageView3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.181"
+        app:layout_constraintHorizontal_bias="0.867"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.587" />
+        app:layout_constraintVertical_bias="0.975" />
 
     <Button
         android:id="@+id/btnCreate"
-        android:layout_width="334dp"
-        android:layout_height="87dp"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
         android:backgroundTint="@color/colorPrimary"
+        android:fontFamily="sans-serif"
         android:text="Create Session"
         android:textColor="@android:color/black"
+        android:textFontWeight="800"
         android:textSize="20sp"
         app:cornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintHorizontal_bias="0.87"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.473" />
-
-    <ImageView
-        android:id="@+id/imageView3"
-
-        android:layout_width="33dp"
-        android:layout_height="34dp"
-        android:src="@drawable/chess_knight"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/btnCreate"
-        app:layout_constraintEnd_toEndOf="@+id/btnCreate"
-        app:layout_constraintHorizontal_bias="0.485"
-        app:layout_constraintStart_toStartOf="@+id/btnCreate"
-        app:layout_constraintTop_toTopOf="@+id/btnCreate"
-        app:layout_constraintVertical_bias="0.099" />
+        app:layout_constraintVertical_bias="0.395" />
 
     <Button
         android:id="@+id/btnOffline"
 
-        android:layout_width="334dp"
-        android:layout_height="87dp"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
         android:backgroundTint="@color/colorPrimary"
-        android:text="Play Offline"
+        android:fontFamily="sans-serif"
+        android:text="Play"
         android:textColor="@android:color/black"
+        android:textFontWeight="800"
         android:textSize="20sp"
         app:cornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.558"
+        app:layout_constraintHorizontal_bias="0.166"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.189" />
+        app:layout_constraintVertical_bias="0.395" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+
+        android:layout_width="41dp"
+        android:layout_height="36dp"
+        android:src="@drawable/icon"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/btnOffline"
+        app:layout_constraintEnd_toEndOf="@+id/btnOffline"
+        app:layout_constraintHorizontal_bias="0.505"
+        app:layout_constraintStart_toStartOf="@+id/btnOffline"
+        app:layout_constraintTop_toTopOf="@+id/btnOffline"
+        app:layout_constraintVertical_bias="0.115" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/subCl"
         android:layout_width="match_parent"
-        android:layout_height="228dp"
+        android:layout_height="273dp"
         android:layout_marginTop="52dp"
         android:background="@color/backgroundSecund"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -77,7 +82,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnCreate"
-        app:layout_constraintVertical_bias="0.993">
+        app:layout_constraintVertical_bias="0.36">
 
         <Button
             android:id="@+id/btnJoin"
@@ -85,8 +90,10 @@
             android:layout_height="87dp"
             android:layout_margin="12dp"
             android:backgroundTint="@color/colorPrimary"
+            android:fontFamily="sans-serif"
             android:text="Join Session"
             android:textColor="@android:color/black"
+            android:textFontWeight="800"
             android:textSize="20sp"
             app:cornerRadius="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -109,30 +116,73 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.141" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Insert the game id of the session your opponent has created"
-        app:layout_constraintBottom_toTopOf="@+id/subCl"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.489"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.989" />
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Insert the game id of the session your opponent has created"
+            tools:layout_editor_absoluteX="18dp"
+            tools:layout_editor_absoluteY="1dp" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Start a game without internet conexion"
-        app:layout_constraintBottom_toTopOf="@+id/subCl"
+        android:text="or"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/textView7"
+        app:layout_constraintHorizontal_bias="0.725"
+        app:layout_constraintStart_toEndOf="@+id/textView9" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="128dp"
+        android:layout_height="26dp"
+        android:layout_marginBottom="12dp"
+        android:text="Play in offline mode"
+        app:layout_constraintBottom_toTopOf="@+id/btnOffline"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.242"
+        app:layout_constraintHorizontal_bias="0.159"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.212" />
+        app:layout_constraintVertical_bias="1.0" />
+
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="41dp"
+        android:layout_height="32dp"
+        android:rotation="45"
+        android:src="@drawable/wifi"
+        app:layout_constraintBottom_toBottomOf="@+id/btnCreate"
+        app:layout_constraintEnd_toEndOf="@+id/btnCreate"
+        app:layout_constraintHorizontal_bias="0.747"
+        app:layout_constraintStart_toStartOf="@+id/btnCreate"
+        app:layout_constraintTop_toTopOf="@+id/btnCreate"
+        app:layout_constraintVertical_bias="0.083" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="41dp"
+        android:layout_height="36dp"
+        android:src="@drawable/icon"
+        app:layout_constraintBottom_toBottomOf="@+id/btnCreate"
+        app:layout_constraintEnd_toEndOf="@+id/btnCreate"
+        app:layout_constraintHorizontal_bias="0.535"
+        app:layout_constraintStart_toStartOf="@+id/btnCreate"
+        app:layout_constraintTop_toTopOf="@+id/btnCreate"
+        app:layout_constraintVertical_bias="0.125" />
+
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="210dp"
+        android:layout_height="168dp"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/logo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
