--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,14 +11,14 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="49dp"
-        android:background="@drawable/sign_in_button_background"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.802">
-
+        app:layout_constraintVertical_bias="0.802"
+        android:background="@drawable/sign_in_button_background">
 
         <com.google.android.gms.common.SignInButton
             android:id="@+id/signInButton"
