--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,17 +7,13 @@
         <item
             android:id="@+id/nav_home"
             android:name="com.ilm.onlinechess.ui.home.HomeFragment"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/chessboard"
             android:title="@string/menu_home" />
-        <item
-            android:id="@+id/nav_game"
-            android:name="com.ilm.onlinechess.ui.game.GameFragment"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Play" />
+   
         <item
             android:id="@+id/nav_profile"
             android:name="com.ilm.onlinechess.ui.profile.ProfileFragment"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/profile"
             android:title="Profile" />
 
 
