--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -33,10 +33,10 @@
         app:cornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.87"
+        app:layout_constraintHorizontal_bias="0.867"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.395" />
+        app:layout_constraintVertical_bias="0.429" />
 
     <Button
         android:id="@+id/btnOffline"
@@ -54,7 +54,7 @@
         app:layout_constraintHorizontal_bias="0.166"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.395" />
+        app:layout_constraintVertical_bias="0.429" />
 
     <ImageView
         android:id="@+id/imageView3"
@@ -73,7 +73,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/subCl"
         android:layout_width="match_parent"
-        android:layout_height="280dp"
+        android:layout_height="250dp"
         android:layout_marginTop="52dp"
         android:background="@color/backgroundSecund"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -85,8 +85,8 @@
 
         <Button
             android:id="@+id/btnJoin"
-            android:layout_width="334dp"
-            android:layout_height="87dp"
+            android:layout_width="300dp"
+            android:layout_height="70dp"
             android:layout_margin="12dp"
             android:backgroundTint="@color/colorPrimary"
             android:fontFamily="sans-serif"
@@ -97,9 +97,10 @@
             app:cornerRadius="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.87" />
+            app:layout_constraintVertical_bias="0.704" />
 
         <EditText
             android:id="@+id/gameID"
@@ -128,16 +129,6 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.061" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="or"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/textView7"
-        app:layout_constraintHorizontal_bias="0.725"
-        app:layout_constraintStart_toEndOf="@+id/textView9" />
 
     <TextView
         android:id="@+id/textView9"
@@ -179,13 +170,14 @@
 
     <ImageView
         android:id="@+id/imageView7"
-        android:layout_width="210dp"
-        android:layout_height="168dp"
+        android:layout_width="215dp"
+        android:layout_height="148dp"
         android:layout_marginTop="16dp"
         android:src="@drawable/logo"
+        app:layout_constraintBottom_toTopOf="@+id/subCl"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
