--- a/app/src/main/res/layout/activity_game_nav.xml
+++ b/app/src/main/res/layout/activity_game_nav.xml
@@ -11,7 +11,7 @@
 
     <include
         android:id="@+id/app_bar_login_nav"
-        layout="@layout/app_bar_login_nav"
+        layout="@layout/app_bar_game_nav"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
@@ -21,7 +21,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:headerLayout="@layout/nav_header_login_nav"
+        app:headerLayout="@layout/nav_header_game_nav"
         app:menu="@menu/activity_main_drawer" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
