--- a/app/src/main/res/layout/app_bar_game_nav.xml
+++ b/app/src/main/res/layout/app_bar_game_nav.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginNav">
+    tools:context=".GameNav">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -19,6 +19,6 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include layout="@layout/content_login_nav" />
+    <include layout="@layout/content_game_nav" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
