--- a/app/src/main/res/layout/content_game_nav.xml
+++ b/app/src/main/res/layout/content_game_nav.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/app_bar_login_nav">
+    tools:showIn="@layout/app_bar_game_nav">
 
     <fragment
         android:id="@+id/nav_host_fragment_content_login_nav"
