--- a/app/src/main/res/layout/fragment_lobby.xml
+++ b/app/src/main/res/layout/fragment_lobby.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.login.LoginFragment">
+    tools:context=".ui.lobby.LobbyFragment">
 
 
     <TextView
         android:id="@+id/textView7"
-        android:layout_width="140dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
         android:text="Create an online game "
@@ -18,7 +18,7 @@
         app:layout_constraintHorizontal_bias="0.867"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.968" />
+        app:layout_constraintVertical_bias="0.965" />
 
     <Button
         android:id="@+id/btnCreate"
@@ -132,13 +132,13 @@
 
     <TextView
         android:id="@+id/textView9"
-        android:layout_width="140dp"
+        android:layout_width="128dp"
         android:layout_height="26dp"
         android:layout_marginBottom="12dp"
         android:text="Play in offline mode"
         app:layout_constraintBottom_toTopOf="@+id/btnOffline"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.166"
+        app:layout_constraintHorizontal_bias="0.159"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
