--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,16 +5,17 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
-            android:name="com.ilm.onlinechess.ui.home.HomeFragment"
+            android:id="@+id/nav_lobby"
+            android:name="com.ilm.onlinechess.ui.lobby.LobbyFragment"
             android:icon="@drawable/chessboard"
-            android:title="@string/menu_home" />
+            android:title="Lobby" />
    
         <item
             android:id="@+id/nav_profile"
             android:name="com.ilm.onlinechess.ui.profile.ProfileFragment"
             android:icon="@drawable/profile"
             android:title="Profile" />
+
 
 
     </group>
