--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FFD211</color>
+    <color name="colorPrimary">#FFD627</color>
     <color name="white">#FFFFFFFF</color>
     <color name="transparent">#00000000</color>
-    <color name="background">#040F16</color>
+    <color name="background">#05121B</color>
     <color name="gray">   #3C3B39</color>
-    <color name="backgroundSecund">#081D2B</color>
+    <color name="backgroundSecund">#09202E</color>
     <color name="font">#FFFFFFFF</color>
+    <color name="black">#000000</color>
 
 </resources>
